--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "type": "module",
   "scripts": {
+    "start": "node server.js",
     "server": "nodemon server.js",
     "push": "git add . && git commit -m 'wip' && git push"
   },
